Closed Bug 155869 Opened 23 years ago Closed 23 years ago

Dragging active throbber out during toolbar customization crashes

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.5

People

(Reporter: stf, Assigned: mikepinkerton)

References

()

Details

(Keywords: crash)

Attachments

(2 files, 2 obsolete files)

If you are downloading a page (this one almost never stop for me) and the Progress icon is spinning, ask Customize Toolbar and drag the Progress icon out of the toolbar to remove it, it poofs, then Chimera crashes.
Attached file poof crash log
poof crash log
Build 0704 1601 I was trying to reproduce a bug that also appear with the poof crash, but until now I was not able too... briefly the bugzilla web form was no more usable, can't put the cursor in the field. But that's not that one, it seems there is also a bug with the CMD-B commands, here are several crash logs (cmd-b crash) but can't find an exact path. Perhaps it's also the Poof bug but appearing later, but there is anyway other problems. What I was doing is in the http://bugzilla.mozilla.org/enter_bug.cgi?product=Chimera page, it seems to occurs more often there than with a blank page, quickly type cmd-B and again cmd-B the Sidebar appears and then disappear, Yes I know that's not normal/possible as the Cmd-B is only for Show Side bar which never change to hide. Try to open Customize toolbar sheet, remove the sidebar icon from the toolbar by dragging it inside page contents, poof, close sheet, CMD-B and quickly CMD-B. Crash... sometimes. Or do the contrary add the Sidebar icon to the toolbar, close customize and cmd-B twice quickly... I've tried different starting position, cursor in location bar, or in form field or no where/empty area, or link selected or not in the sidebar... but I did not find the path to reproduce. Another problem is that when the customize toolbar sheet is opened, you can still click on the ShowSide bar icon in the toolbar, it will open it, but it will not close it!
Attached file cmd-b crash log (obsolete) —
cmd-B crash log
I think there is also a toolbar redraw problem perhaps linked to this bug too. Open a blank page reduce its width (15cm) in order to avoid it to move when you hide/show the Sidebar. Now quickly click on hide/show sidebar icon in the toolbar and also type cmd-B at the same time, in between... repeat several timeS very quickly to hide and show it. You'll see sometimes : A. the location bar end, ~1cm from end, which is close to the Show/Hide Side bar icon, will be redraw very slowy, however it's not covered. B. the entire toolbar will not be redraw except the Show/Hide side bar icon. See the capture. Build 0704 16:01
Attached image cmdB click (obsolete) —
cmd b click
These are totally different stacks, please keep to one issue per bug. Thanks
Severity: normal → critical
Keywords: crash
Stephane, please file your second issue as another bug.
Summary: Progress drag poof and crash → Progress drag poof and crash [@ objc_msgSend]
Comment on attachment 90280 [details] cmd-b crash log A different issue.
Attachment #90280 - Attachment is obsolete: true
Comment on attachment 90285 [details] cmdB click A different issue.
Attachment #90285 - Attachment is obsolete: true
Using Chimera 7-22: I had this same crash several times by doing the following: 1.) go to http://bugzilla.mozilla.org/query.cgi 2.) use the *default* query (usually returns 25000 bugs, gives you time before page loads) 3.) immediately go to view->customize toolbar 4.) drag the spinning throbber out (should still be spinning as bugzilla struggles) 5.) poof... progress throbber goes bye bye along with the rest of chimera Hope this helps
better summary.
Summary: Progress drag poof and crash [@ objc_msgSend] → Dragging active throbber out during toolbar customization crashes
Attached patch fixSplinter Review
tells the throbber to stop throbbing when we've been dethrobbed.
adding smfr & pink to cc list on pink's advice.
mine
Assignee: saari → pinkerton
Target Milestone: --- → Chimera0.5
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified in the 2002-08-21-05 NB.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: