Stop the throbber from animating when it's been removed from the toolbar (bug 155869)